<resources>
    <string name="app_name">NovaPoshtaApplication</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="EmailPhoneHint">Email or phone</string>
    <string name="PassHint">Password</string>
    <string name="LogBtn">LOG IN</string>
    <string name="FacebookBtn">Facebook</string>
    <string name="GoogleBtn">Google</string>
    <string name="TwitterBtn">Twitter</string>
    <string name="ViberBtn">Viber</string>
    <string name="RegisterBtn">Register</string>
    <string name="EmailHint">Email</string>
    <string name="PhoneHint">Phone</string>
    <string name="FirstNameHint">FirstName</string>
    <string name="LastNameHint">LastName</string>
    <string name="ConfPassHint">Confirm password</string>
    <string name="SaveDataString">Save data</string>
    <string name="MainMenuString">Main menu</string>
    <string name="DepartBtn">My departure</string>
    <string name="ParcelBtn">Create parcel</string>
    <string name="FindPostBtn">Find post office</string>
    <string name="PayBtn">Pay for parcel</string>
    <string name="ProfileDesc">Profile Image</string>
    <string name="RefreshBtn">Refresh</string>
    <string name="MoreInfoBtn">More information</string>
    <string name="textViewString">Title</string>
    <string name="textDescription">Description</string>
    <string name="title_activity_maps">Map</string>
    <string name="NovaPoshtaImg">Nova Poshta</string>
    <string name="CreateParcel">Create parcel</string>
    <string name="textTitle">Title</string>
    <string name="ParcelPay">Pay</string>
    <string name="ParcelMap">Map</string>
    <string name="MuchText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="SavePlaces">Save Places</string>
    <string name="ChoosePlace">Choose Place</string>
</resources>
