<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_activity"
    android:id="@+id/BackGroundCL"
    android:background="@drawable/nature_wallpaperv2">
    <LinearLayout
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/LinearLayoutStyle"
        android:background="#fff">
        <EditText
            android:id="@+id/Name"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="textPersonName"
            android:hint="@string/FirstNameHint"
            android:autofillHints="@string/FirstNameHint">
        </EditText>
        <EditText
            android:id="@+id/Surname"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="textPersonName"
            android:hint="@string/LastNameHint"
            android:autofillHints="@string/LastNameHint"
            android:layout_marginTop="20dp">
        </EditText>
        <EditText
            android:id="@+id/Email"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="textEmailAddress"
            android:hint="@string/EmailHint"
            android:autofillHints="@string/EmailHint"
            android:layout_marginTop="20dp">
        </EditText>
        <EditText
            android:id="@+id/Phone"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="phone"
            android:hint="@string/PhoneHint"
            android:autofillHints="@string/PhoneHint"
            android:layout_marginTop="20dp">
        </EditText>
        <EditText
            android:id="@+id/Password"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="textPassword"
            android:hint="@string/PassHint"
            android:autofillHints="@string/PassHint"
            android:layout_marginTop="20dp">
        </EditText>
        <EditText
            android:id="@+id/ConsfirmPassword"
            style="@style/EditTextStyle"
            android:textColorHint="@color/EditTextColor"
            android:inputType="textPassword"
            android:hint="@string/ConfPassHint"
            android:autofillHints="@string/ConfPassHint"
            android:layout_marginTop="20dp">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/RegisterBtn"
        android:text="@string/RegisterBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="regFun"
        style="@style/LogInBtnStyle"
        android:textSize="30sp"
        android:textColor="@color/BtnColor"
        android:background="@drawable/button_background">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>