<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login_activity"
    android:id="@+id/BackGroundCL"
    android:background="@drawable/nature_wallpaperv2">
    <LinearLayout
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/LinearLayoutStyle">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#fff">
            <EditText
                android:id="@+id/EmailField"
                style="@style/EditTextStyle"
                android:textColorHint="@color/EditTextColor"
                android:hint="@string/EmailPhoneHint"
                android:autofillHints="@string/EmailPhoneHint"
                android:inputType="textEmailAddress">
            </EditText>
            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/PassField"
                style="@style/EditTextStyle"
                android:textColorHint="@color/EditTextColor"
                android:hint="@string/PassHint"
                android:inputType="textPassword"
                android:autofillHints="@string/PassHint">
            </EditText>
        </LinearLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageButton
                android:id="@+id/FaceBookBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/facebook_new"
                android:background="@null"
                android:contentDescription="@string/FacebookBtn"
                style="@style/FacebookBtnStyle">
            </ImageButton>
            <ImageButton
                android:id="@+id/GoogleBtn"
                app:layout_constraintStart_toEndOf="@+id/FaceBookBtn"
                app:layout_constraintEnd_toStartOf="@+id/TwitterBtn"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/google_new"
                android:background="@null"
                android:contentDescription="@string/GoogleBtn"
                style="@style/GoogleBtnStyle">
            </ImageButton>
            <ImageButton
                android:id="@+id/TwitterBtn"
                app:layout_constraintStart_toEndOf="@+id/GoogleBtn"
                app:layout_constraintEnd_toStartOf="@+id/ViberBtn"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/twitter_new"
                android:background="@null"
                android:contentDescription="@string/TwitterBtn"
                style="@style/TwitterBtnStyle">
            </ImageButton>
            <ImageButton
                android:id="@+id/ViberBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:src="@drawable/viber_new"
                android:background="@null"
                android:contentDescription="@string/ViberBtn"
                style="@style/ViberBtnStyle">
            </ImageButton>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <Button
        android:id="@+id/LogInButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/LogInBtnStyle"
        android:background="@drawable/button_background"
        android:text="@string/LogBtn"
        android:textSize="30sp"
        android:onClick="OnLogIn"
        android:textColor="@color/BtnColor">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>