<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainmenu_activity"
    android:background="@drawable/nature_wallpaperv2">
    <ImageView
        android:id="@+id/MainProfileImage"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="0dp"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:src="@drawable/person_new"
        android:contentDescription="@string/ProfileDesc">
    </ImageView>
    <LinearLayout
        android:id="@+id/LowerLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/FindPostBtn"
            style="@style/MainMenuBtnStyle"
            android:text="@string/FindPostBtn"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor"
            android:onClick="findPostOffices">
        </Button>
        <Button
            android:id="@+id/PayBtn"
            style="@style/MainMenuBtnStyle"
            android:text="@string/PayBtn"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor"
            android:onClick="payParcel">
        </Button>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/UpperLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/LowerLL"
        app:layout_constraintStart_toStartOf="parent">
        <Button
            android:id="@+id/DepartBtn"
            android:onClick="departuresClick"
            style="@style/MainMenuBtnStyle"
            android:text="@string/DepartBtn"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor">
        </Button>
        <Button
            android:id="@+id/ParcelBtn"
            android:onClick="createParcel"
            style="@style/MainMenuBtnStyle"
            android:text="@string/ParcelBtn"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor">
        </Button>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/MenuProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintTop_toTopOf="@+id/MainProfileImage"
        app:layout_constraintBottom_toBottomOf="@+id/MainProfileImage"
        app:layout_constraintStart_toStartOf="@+id/MainProfileImage"
        app:layout_constraintEnd_toEndOf="@+id/MainProfileImage"
        android:visibility="gone">
    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>