<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/BackGroundCL"
    android:background="@drawable/nature_wallpaper">

    <ImageView
        android:id="@+id/NovaPoshtaImg"
        android:layout_width="228dp"
        android:layout_height="198dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:src="@drawable/nova_poshta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/NovaPoshtaImg">
    </ImageView>
    <Button
        android:id="@+id/RegBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/RegisterBtn"
        android:textSize="30sp"
        android:textColor="@color/BtnColor"
        android:background="@drawable/button_background"
        android:onClick="registerAct"
        app:layout_constraintTop_toBottomOf="@+id/NovaPoshtaImg"
        android:layout_marginTop="60dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp">
    </Button>
    <Button
        android:id="@+id/LogInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/LogBtn"
        android:textSize="30sp"
        android:onClick="logInAct"
        android:textColor="@color/BtnColor"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toBottomOf="@+id/RegBtn"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="30dp">
    </Button>
    <Button
        android:id="@+id/InfoBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MoreInfoBtn"
        android:textSize="14sp"
        android:textColor="@color/BtnColor"
        android:background="@color/BtnBackGround"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="90dp"
        android:onClick="documentationClick">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>