<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDepartActivity"
    android:background="@drawable/nature_wallpaperv2">
    <ImageView
        android:id="@+id/DepImage"
        android:src="@drawable/person_new"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="onParcelImgClick">
    </ImageView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/DepImage"
        app:layout_constraintBottom_toTopOf="@+id/ChangePlace"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <EditText
            android:gravity="top"
            android:id="@+id/DepartTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:hint="@string/textTitle"
            android:background="#fff">
        </EditText>
        <EditText
            android:gravity="top"
            android:id="@+id/DepartDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_weight="5"
            android:hint="@string/textDescription"
            android:background="#fff">
        </EditText>
    </LinearLayout>
    <Button
        android:id="@+id/ChangePlace"
        app:layout_constraintBottom_toTopOf="@+id/CreateDepBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CreateParcelBtn"
        android:background="@drawable/button_background"
        android:text="@string/ChoosePlace"
        android:textSize="30sp"
        android:textColor="@color/BtnColor"
        android:onClick="onPlaceChange">
    </Button>
    <Button
        android:id="@+id/CreateDepBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/CreateParcelBtn"
        android:background="@drawable/button_background"
        android:text="@string/CreateParcel"
        android:textSize="30sp"
        android:textColor="@color/BtnColor"
        android:onClick="onDepartSave">
    </Button>
</androidx.constraintlayout.widget.ConstraintLayout>