<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDepartActivity"
    android:background="@drawable/nature_wallpaperv2">
    <ImageView
        android:id="@+id/ShowDepImage"
        android:src="@drawable/person_new"
        android:layout_width="180dp"
        android:layout_height="180dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    </ImageView>
    <LinearLayout
        android:id="@+id/ShowDepDetail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/ShowDepImage"
        app:layout_constraintBottom_toTopOf="@+id/ParcelOptionLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">
        <TextView
            android:id="@+id/TitleTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/textTitle"
            android:background="#fff"
            android:gravity="top"
            android:textColor="@color/EditTextColor">
        </TextView>
        <TextView
            android:id="@+id/DescTV"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/textDescription"
            android:background="#fff"
            android:gravity="top"
            android:textColor="@color/EditTextColor">
        </TextView>
        <LinearLayout
            android:id="@+id/DepPlacesLL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="#fff">
            <TextView
                android:id="@+id/DepPlaceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MuchText"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/EditTextColor">
            </TextView>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/place_arrow"
                android:layout_gravity="center_vertical">
            </ImageView>
            <TextView
                android:id="@+id/ArrPlaceTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/MuchText"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="@color/EditTextColor">
            </TextView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ParcelOptionLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <Button
            android:id="@+id/ParcelMap"
            style="@style/ParcelOptionStyle"
            android:text="@string/ParcelMap"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor"
            android:onClick="MapShow">
        </Button>
        <Button
            android:id="@+id/ParcelPay"
            style="@style/ParcelOptionStyle"
            android:text="@string/ParcelPay"
            android:background="@drawable/rectanglebtn_background"
            android:textSize="20sp"
            android:textColor="@color/BtnColor">
        </Button>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/ShowDepBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Widget.AppCompat.ProgressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:visibility="gone">
    </ProgressBar>
</androidx.constraintlayout.widget.ConstraintLayout>